Updated ajax fail to better handle error message.

--- a/contactWidget.html
+++ b/contactWidget.html
@@ -115,8 +115,9 @@
 <script type="text/javascript" src="/js/loantek-manual-contact-widget.js"></script>
 <script type="text/javascript">
 var loanTekManualContactWidgetOptions = {
-	postUrl: 'http://node-cors-server.herokuapp.com/no-cors',
+	// postUrl: 'http://node-cors-server.herokuapp.com/no-cors',
 	// postUrl: 'http://node-cors-server.herokuapp.com/simple-cors',
+	postUrl: 'http://localhost:51256/SalesLeadRequest/Add/RFdNVkY3OE5pZHltR0lDQ0Q3d3dReERxczN5Ukw0V3czWGg5Y2I4VjhkWWJBWGpGYjFCR0pBQT01',
 	// redirectUrl: 'http://www.google.com',
 	form: {
 		comments: 'testComment'
