--- a/contactWidgetBuild.html
+++ b/contactWidgetBuild.html
@@ -10,7 +10,12 @@ var loanTekManualContactWidgetBuildObject = {
 		// override form defaults
 	},
 	fields: [
-		{ type: 'text', id: 'ltcwFirstName', placeholder: 'First Name', required: true }
+		{ element: 'input', type: 'text', id: 'ltcwFirstName', placeholder: 'First Name', required: true, cols: 6 },
+		{ element: 'input', type: 'text', id: 'ltcwLastName', placeholder: 'Last Name', required: true, cols: 6 },
+		{ element: 'input', type: 'email', id: 'ltcwEmail', placeholder: 'Email', required: true, cols: 6 },
+		{ element: 'input', type: 'tel', id: 'ltcwPhone', placeholder: 'Phone', pattern: '[\\d\\s()-]{7,14}', cols: 6 },
+		{ element: 'input', type: 'tel', id: 'ltcwCompany', placeholder: 'Company', cols: 6 },
+		{ element: 'button', type: 'submit' }
 	]
 };
 LoanTekBuildForm('#ltWidgetWrapper',loanTekManualContactWidgetBuildObject);
