Dynamically adding rows and columns

--- a/contactWidgetBuild.html
+++ b/contactWidgetBuild.html
@@ -1,24 +1,27 @@
 <style type="text/css">.ltcw {display:none;}</style>
 <link rel="stylesheet" href="/css/widget.css">
-<div id="ltWidgetWrapper" class="ltcw container-fluid"></div>
+<div id="ltWidgetWrapper"></div>
 <script type="text/javascript" src="/js/lib/jquery.min.js"></script>
 <script type="text/javascript" src="/js/loantek-manual-contact-widget.js"></script>
 <script type="text/javascript">
+var loanTeckBuildOptions = {
+	showBuilderTools: true,
+	wrapperId: 'ltWidgetWrapper',
+	formId: 'LtcwContactWidgetForm'
+};
 var loanTekManualContactWidgetBuildObject = {
-	formId: 'LtcwContactWidgetForm',
-	baseOptions: {
-		// override form defaults
-	},
 	fields: [
 		{ element: 'input', type: 'text', id: 'ltcwFirstName', placeholder: 'First Name', required: true, cols: 6 },
 		{ element: 'input', type: 'text', id: 'ltcwLastName', placeholder: 'Last Name', required: true, cols: 6 },
-		{ element: 'input', type: 'email', id: 'ltcwEmail', placeholder: 'Email', required: true, cols: 6 },
+		{ element: 'input', type: 'email', id: 'ltcwEmail', placeholder: 'Email', required: true, cols: 4 },
 		{ element: 'input', type: 'tel', id: 'ltcwPhone', placeholder: 'Phone', pattern: '[\\d\\s()-]{7,14}', cols: 6 },
 		{ element: 'input', type: 'tel', id: 'ltcwCompany', placeholder: 'Company', cols: 6 },
-		{ element: 'button', type: 'submit' }
+		{ element: 'select', type: 'state', id: 'ltcwState', placeholder: 'Select a State', cols: 6 },
+		{ element: 'button', type: 'submit' },
+		{ element: 'button', type: 'button', cols: 4 }
 	]
 };
-LoanTekBuildForm('#ltWidgetWrapper',loanTekManualContactWidgetBuildObject);
+LoanTekBuildForm(loanTekManualContactWidgetBuildObject, loanTeckBuildOptions);
 
 var loanTekManualContactWidgetOptions = {
 	// redirectUrl: 'http://www.google.com',
