Added ability for each field to have its own custom style

--- a/contactWidgetBuild.html
+++ b/contactWidgetBuild.html
@@ -5,24 +5,24 @@
 <script type="text/javascript" src="/js/loantek-manual-contact-widget.js"></script>
 <script type="text/javascript">
 var loanTeckBuildOptions = {
-	// showBuilderTools: true,
+	showBuilderTools: true,
 	defaultFormSize: 'sm',
 	wrapperId: 'ltWidgetWrapper',
 	formId: 'LtcwContactWidgetForm'
 };
 var loanTekManualContactWidgetBuildObject = {
 	fields: [
-		{ element: 'input', type: 'text', id: 'ltcwFirstName', placeholder: 'First Name', required: true, cols: 6 },
-		{ element: 'input', type: 'text', id: 'ltcwLastName', placeholder: 'Last Name', required: true, cols: 6 },
-		{ element: 'input', type: 'email', id: 'ltcwEmail', placeholder: 'Email', required: true, cols: 6 },
-		{ element: 'input', type: 'tel', id: 'ltcwPhone', placeholder: 'Phone', pattern: '[\\d\\s()-]{7,14}', cols: 6 },
-		{ element: 'input', type: 'text', id: 'ltcwCompany', placeholder: 'Company', cols: 6 },
-		{ element: 'select', type: 'state', id: 'ltcwState', placeholder: 'Select a State', cols: 6 },
-		{ element: 'textarea', id: 'ltcwComments', placeholder: 'Comments', cols: 12, rows: 4 },
-		{ element: 'button', type: 'submit', cssClass: 'btn-primary', text: 'Submit', sizes: 'lg' },
-		// { element: 'button', type: 'button', cols: 4 },
-		// { element: 'button', type: 'button', cols: 4 },
-		// { element: 'input', type: 'button', text: 'Enter', cssClass: 'btn-info', cols: 4 }
+		{ element: 'input', type: 'text', id: 'ltcwFirstName', placeholder: 'First Name', required: true, cols: 2, style: { color: 'blue', fontWeight: 'bold' }, value: 'First' },
+		{ element: 'input', type: 'text', id: 'ltcwLastName', placeholder: 'Last Name', required: true, cols: 6, value: 'Last' },
+		{ element: 'input', type: 'email', id: 'ltcwEmail', placeholder: 'Email', required: true, cols: 6, value: 'email@mail.com' },
+		{ element: 'input', type: 'tel', id: 'ltcwPhone', placeholder: 'Phone Number', pattern: '[\\d\\s()-]{7,14}', cols: 6, value: '208-255-1795' },
+		{ element: 'input', type: 'text', id: 'ltcwCompany', placeholder: 'Company', cols: 6, value: 'comp' },
+		{ element: 'select', type: 'state', id: 'ltcwState', placeholder: 'Select a State', cols: 6, value: 'UT' },
+		{ element: 'textarea', id: 'ltcwComments', placeholder: 'Comments', cols: 12, rows: 4, value: 'my comments' },
+		{ element: 'button', type: 'submit', cssClass: 'btn-primary', value: 'Submit', size: 'lg', style: { color: 'blue', backgroundColor: '#add', borderRadius: '20px' } },
+		{ element: 'button', type: 'button', cols: 2 },
+		{ element: 'button', type: 'button', cols: 2 },
+		{ element: 'input', type: 'button', value: 'Enter', cssClass: 'btn-info', cols: 2 }
 	]
 };
 LoanTekBuildForm(loanTekManualContactWidgetBuildObject, loanTeckBuildOptions);
