--- a/contactWidgetBuild.html
+++ b/contactWidgetBuild.html
@@ -19,6 +19,7 @@ var loanTekManualContactWidgetBuildObject = {
 		{ element: 'input', type: 'text', id: 'ltcwCompany', placeholder: 'Company', cols: 6, value: 'comp' },
 		{ element: 'select', type: 'state', id: 'ltcwState', placeholder: 'Select a State', cols: 6, value: 'UT' },
 		{ element: 'textarea', id: 'ltcwComments', placeholder: 'Comments', cols: 12, rows: 4, value: 'my comments' },
+		{ element: 'captcha' },
 		{ element: 'button', type: 'submit', cssClass: 'btn-primary', value: 'Submit', size: 'lg', style: { color: 'blue', backgroundColor: '#add', borderRadius: '20px' } },
 		{ element: 'button', type: 'button', cols: 2 },
 		{ element: 'button', type: 'button', cols: 2 },
