--- a/contactWidget.html
+++ b/contactWidget.html
@@ -140,6 +140,7 @@
 							<div class="row">
 								<div class="col-xs-8">
 									<input type="text" id="ltCaptchaInput" class="form-control input-sm" placeholder="Enter the characters" required="required" />
+									<span id="ltCaptchaErrorMsg" class="text-danger small">The code you entered does not match the one shown in the image.</span>
 								</div>
 								<div class="col-xs-4 text-right">
 									<button class="btn btn-info btn-sm" id="ltCaptchaReset" type="button" alt="Reset" title="Reset" tabindex="-1">&nbsp;<span class="glyphicon glyphicon-refresh"></span>&nbsp;</button>
@@ -151,7 +152,7 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<div class="col-sm-12"><button class="btn btn-primary btn-sm" id="ltcwSubmit" type="submit">Submit</button> <button class="btn btn-default" type="button" onclick="form.submit();">test</button> <button class="btn btn-default" type="button" onclick="testValidate();">Validate</button></div>
+			<div class="col-sm-12"><button class="btn btn-primary btn-sm" id="ltcwSubmit" type="submit">Submit</button> <button class="btn btn-default" type="button" onclick="form.submit();">test</button> <button class="btn btn-default" type="button" onclick="captchaValidate();">Validate</button></div>
 		</div>
 	</form>
 	<div class="row" id="ltcwSuccessMessageWrapper" style="display: none;">
@@ -166,15 +167,15 @@
 <script type="text/javascript">
 var ltCaptcha = new LoanTekCaptcha({characterLength: 6});
 function captchaValidate() {
-	// window.console && console.log(ltCaptcha.ValidateEntry());
-	return ltCaptcha.ValidateEntry();
+	// window.console && console.log(ltCaptcha.IsValidEntry());
+	return ltCaptcha.IsValidEntry();
 }
 var loanTekManualContactWidgetOptions = {
 	postUrl: 'http://node-cors-server.herokuapp.com/no-cors',
 	// postUrl: 'http://node-cors-server.herokuapp.com/simple-cors',
 	// postUrl: 'http://localhost:51256/SalesLeadRequest/Add/RFdNVkY3OE5pZHltR0lDQ0Q3d3dReERxczN5Ukw0V3czWGg5Y2I4VjhkWWJBWGpGYjFCR0pBQT01',
 	// redirectUrl: 'http://www.google.com',
-	externalValidatorFunction: captchaValidate,
+	externalValidatorFunction: ltCaptcha.Validate,
 	successMessage: 'Yay!!! Successful POST'
 };
 LoanTekManualContactWidget(loanTekManualContactWidgetOptions);
