--- a/contactWidget.html
+++ b/contactWidget.html
@@ -165,7 +165,7 @@
 <script type="text/javascript" src="/js/lib/jquery.min.js"></script>
 <script type="text/javascript" src="/js/loantek-manual-contact-widget.js"></script>
 <script type="text/javascript">
-var ltCaptcha = new LoanTekCaptcha({characterLength: 6});
+var ltCaptcha = new LoanTekCaptcha();
 function captchaValidate() {
 	// window.console && console.log(ltCaptcha.IsValidEntry());
 	return ltCaptcha.IsValidEntry();
