updated to find the number of columns for the next field and bypass any hidden fields

--- a/contactWidgetBuild.html
+++ b/contactWidgetBuild.html
@@ -25,8 +25,12 @@ var loanTekManualContactWidgetBuildObject = {
 		// { element: 'submit' },
 		// { element: '' },
 
-		// { element: 'input', type: 'hidden', id: 'ltcwClientId', value: 1234 },
 		{ element: 'input', type: 'text', id: 'ltcwFirstName', placeholder: 'First Name', required: true, cols: 2, style: { color: 'blue', fontWeight: 'bold' }, value: 'First' },
+		{ element: 'input', type: 'hidden', id: 'ltcwClientId', value: 1234 },
+		{ element: 'input', type: 'hidden', id: 'ltcwClientId2', value: 1234 },
+		{ element: 'input', type: 'hidden', id: 'ltcwClientId3', value: 1234 },
+		{ element: 'input', type: 'hidden', id: 'ltcwClientId4', value: 1234 },
+		{ element: 'input', type: 'hidden', id: 'ltcwClientId5', value: 1234 },
 		{ element: 'input', type: 'text', id: 'ltcwLastName', placeholder: 'Last Name', required: true, cols: 6, value: 'Last' },
 		{ element: 'input', type: 'email', id: 'ltcwEmail', placeholder: 'Email', required: true, cols: 6, value: 'email@mail.com' },
 		{ element: 'input', type: 'tel', id: 'ltcwPhone', placeholder: 'Phone Number', pattern: '[\\d\\s()-]{7,14}', cols: 6, value: '208-255-1795' },
