--- a/contactWidgetBuild.html
+++ b/contactWidgetBuild.html
@@ -11,37 +11,38 @@ var loanTeckBuildOptions = {
 	formId: 'LtcwContactWidgetForm'
 };
 var loanTekManualContactWidgetBuildObject = {
-	clientID: 1234, // add as hidden field???
-	userID: 6789, // add as hidden field???
+	// clientID: 1234, // add as hidden field???
+	// userID: 6789, // add as hidden field???
 	preCodeCallback: null,
 	fields: [
-		// { element: 'firstname' },
-		// { element: 'lastname' },
-		// { element: 'email' },
-		// { element: 'phone' },
-		// { element: 'company' },
-		// { element: 'state' },
-		// { element: 'comments' },
-		// { element: 'submit' },
-		// { element: '' },
+		{ field: 'clientid' },
+		{ field: 'firstname' },
+		{ field: 'lastname' },
+		// { element: 'input', type: 'text', id: 'ltcwLastName', placeholder: 'Last Name', required: true, cols: 6, value: 'Last' },
+		{ field: 'email' },
+		{ field: 'phone' },
+		{ field: 'company' },
+		{ field: 'state' },
+		{ field: 'comments' },
+		{ field: 'submit' }
 
-		{ element: 'input', type: 'text', id: 'ltcwFirstName', placeholder: 'First Name', required: true, cols: 2, style: { color: 'blue', fontWeight: 'bold' }, value: 'First' },
-		{ element: 'input', type: 'hidden', id: 'ltcwClientId', value: 1234 },
-		{ element: 'input', type: 'hidden', id: 'ltcwClientId2', value: 1234 },
-		{ element: 'input', type: 'hidden', id: 'ltcwClientId3', value: 1234 },
-		{ element: 'input', type: 'hidden', id: 'ltcwClientId4', value: 1234 },
-		{ element: 'input', type: 'hidden', id: 'ltcwClientId5', value: 1234 },
-		{ element: 'input', type: 'text', id: 'ltcwLastName', placeholder: 'Last Name', required: true, cols: 6, value: 'Last' },
-		{ element: 'input', type: 'email', id: 'ltcwEmail', placeholder: 'Email', required: true, cols: 6, value: 'email@mail.com' },
-		{ element: 'input', type: 'tel', id: 'ltcwPhone', placeholder: 'Phone Number', pattern: '[\\d\\s()-]{7,14}', cols: 6, value: '208-255-1795' },
-		{ element: 'input', type: 'text', id: 'ltcwCompany', placeholder: 'Company', cols: 6, value: 'comp' },
-		{ element: 'select', type: 'state', id: 'ltcwState', placeholder: 'Select a State', cols: 6, values: 'UT' },
-		{ element: 'textarea', id: 'ltcwComments', placeholders: 'Comments', cols: 12, rows: 4, value: 'my comments' },
-		{ element: 'captcha' },
-		{ element: 'button', type: 'submit', cssClass: 'btn-primary', value: 'Submit', size: 'lg', style: { color: 'blue', backgroundColor: '#add', borderRadius: '20px' } },
-		{ element: 'button', type: 'button', cols: 2 },
-		{ element: 'button', type: 'button', cols: 2 },
-		{ element: 'input', type: 'button', value: 'Enter', cssClass: 'btn-info', cols: 2 }
+		// { element: 'input', type: 'text', id: 'ltcwFirstName', placeholder: 'First Name', required: true, cols: 2, style: { color: 'blue', fontWeight: 'bold' }, value: 'First' },
+		// { element: 'input', type: 'hidden', id: 'ltcwClientId', value: 1234 },
+		// { element: 'input', type: 'hidden', id: 'ltcwClientId2', value: 1234 },
+		// { element: 'input', type: 'hidden', id: 'ltcwClientId3', value: 1234 },
+		// { element: 'input', type: 'hidden', id: 'ltcwClientId4', value: 1234 },
+		// { element: 'input', type: 'hidden', id: 'ltcwClientId5', value: 1234 },
+		// { element: 'input', type: 'text', id: 'ltcwLastName', placeholder: 'Last Name', required: true, cols: 6, value: 'Last' },
+		// { element: 'input', type: 'email', id: 'ltcwEmail', placeholder: 'Email', required: true, cols: 6, value: 'email@mail.com' },
+		// { element: 'input', type: 'tel', id: 'ltcwPhone', placeholder: 'Phone Number', pattern: '[\\d\\s()-]{7,14}', cols: 6, value: '208-255-1795' },
+		// { element: 'input', type: 'text', id: 'ltcwCompany', placeholder: 'Company', cols: 6, value: 'comp' },
+		// { element: 'select', type: 'state', id: 'ltcwState', placeholder: 'Select a State', cols: 6, values: 'UT' },
+		// { element: 'textarea', id: 'ltcwComments', placeholders: 'Comments', cols: 12, rows: 4, value: 'my comments' },
+		// // { element: 'captcha' },
+		// { element: 'button', type: 'submit', cssClass: 'btn-primary', value: 'Submit', size: 'lg', style: { color: 'blue', backgroundColor: '#add', borderRadius: '20px' } },
+		// { element: 'button', type: 'button', cols: 2 },
+		// { element: 'button', type: 'button', cols: 2 },
+		// { element: 'input', type: 'button', value: 'Enter', cssClass: 'btn-info', cols: 2 }
 	]
 };
 LoanTekBuildForm(loanTekManualContactWidgetBuildObject, loanTeckBuildOptions);
