captcha now uses images for letters

--- a/contactWidget.html
+++ b/contactWidget.html
@@ -108,12 +108,19 @@
 						<div class="panel-body">
 							<div class="form-group">
 								<div class="col-sm-12">
+									<!-- <div class="captcha-font captcha02">
+										<span class="sans-alphabet" style="width:40px; height: 50px; margin-top:5px; display: inline-block; background-position: -5px -100px;"></span>
+										<span class="sans-alphabet" style="width:40px; height: 50px; margin-top:5px; display: inline-block; background-position: -55px -350px;"></span>
+										<span class="sans-alphabet" style="width:40px; height: 50px; margin-top:5px; display: inline-block; background-position: -5px 0px;"></span>
+										<span class="sans-alphabet" style="width:40px; height: 50px; margin-top:5px; display: inline-block; background-position: -5px -850px;"></span>
+										<span class="sans-alphabet" style="width:40px; height: 50px; margin-top:5px; display: inline-block; background-position: -55px -900px;"></span>
+									</div> -->
 									<div id="ltCaptchaImg" class="captcha-font">
-										<span class="font11">C</span>
+										<!-- <span class="font11">C</span>
 										<span class="font12">H</span>
 										<span class="font13">A</span>
 										<span class="font09">R</span>
-										<span class="font10">S</span>
+										<span class="font10">S</span> -->
 									</div>
 								</div>
 							</div>
