moved jquery noconflict out, widget builder files created

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="/css/site-bootstrap.css" />
 	<link rel="stylesheet" href="/css/site.css" />
 </head>
-<body data-ng-app="widgetApp" data-ng-controller="contactWidgetController">
+<body data-ng-app="WidgetBuilder" data-ng-controller="WidgetBuilderController">
 	<nav>
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
@@ -29,7 +29,7 @@
 		</div>
 	</nav>
 	<div class="container">
-		<h1>Contact Widget</h1>
+		<h1>Widget Builder</h1>
 		<div class="row">
 			<div class="col-sm-4">
 				<form action="" class="form-horizontal">
@@ -66,6 +66,6 @@
 	<script type="text/javascript" src="/js/lib/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/lib/angular.min.js"></script>
 	<script type="text/javascript" src="/js/lib/ui-bootstrap-tpls.min.js"></script>
-	<script type="text/javascript" src="/js/build-contact-widget.js"></script>
+	<script type="text/javascript" src="/js/widget-builder.js"></script>
 </body>
 </html>
